--- a/app.json
+++ b/app.json
@@ -22,6 +22,24 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Permite $(lima2) acessar a sua camera",
+          "microphonePermission":"Permite $(lima2) acessar a seu microfone",
+          "recordAudioAndroid": true
+        }
+      ],
+      [
+        "expo-media-library",
+        {
+          "photosPermission": "Permite $(lima2) acessar a suas fotos",
+          "savePhotosPermission":"Permite $(lima2) salvar suas fotos",
+          "isAccessMediaLocationEnable":true
+        }
+      ]
+    ]
   }
 }
