--- a/package.json
+++ b/package.json
@@ -19,19 +19,22 @@
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "expo": "^51.0.25",
+    "expo-camera": "~15.0.14",
+    "expo-image-picker": "~15.0.7",
+    "expo-location": "~17.0.1",
+    "expo-media-library": "~16.0.4",
     "expo-status-bar": "~1.12.1",
     "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-native": "^0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.14.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1",
-    "expo-camera": "~15.0.14",
-    "expo-media-library": "~16.0.4",
-    "expo-image-picker": "~15.0.7",
-    "react-native-maps": "1.14.0",
-    "expo-location": "~17.0.1"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
