--- a/package.json
+++ b/package.json
@@ -11,34 +11,36 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-masked-view/masked-view": "0.3.1",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/drawer": "^6.7.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
-    "expo": "^51.0.25",
-    "expo-camera": "~15.0.14",
-    "expo-image-picker": "~15.0.7",
-    "expo-location": "~17.0.1",
-    "expo-media-library": "~16.0.4",
-    "expo-status-bar": "~1.12.1",
-    "lottie-react-native": "6.7.0",
-    "react": "18.2.0",
-    "react-native": "^0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "expo": "^52.0.11",
+    "expo-camera": "^16.0.7",
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.2",
+    "expo-media-library": "^17.0.3",
+    "expo-notifications": "^0.29.8",
+    "expo-sensors": "^14.0.1",
+    "expo-status-bar": "~2.0.0",
+    "lottie-react-native": "7.1.0",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "1.14.0",
+    "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "3.31.1"
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
   "private": true
